--- a/1_allgemein.Rmd
+++ b/1_allgemein.Rmd
@@ -9,7 +9,7 @@ library(tidyverse)
 
 Ich verwende die folgenden Beispielsdaten
 
-- (Biogeographische Regionen der Schweiz)[https://www.bafu.admin.ch/bafu/de/home/themen/landschaft/publikationen-studien/publikationen/die-biogeographischen-regionen-der-schweiz.html]
+- [Biogeographische Regionen der Schweiz](https://www.bafu.admin.ch/bafu/de/home/themen/landschaft/publikationen-studien/publikationen/die-biogeographischen-regionen-der-schweiz.html)
 
 - Digitales Höhenmodell der Schweiz mit einer 100m x 100m Auflösung.
 
