--- a/3_grafiken.Rmd
+++ b/3_grafiken.Rmd
@@ -8,7 +8,7 @@ library(raster)
 ## Nützliche Resourcen
 
 ### Links
-- (ggplot3)[https://ggplot2-book.org/]: Bookdown Version. Work in Progress Version des ggplot2 Buches.
+- [ggplot3](https://ggplot2-book.org/): Bookdown Version. Work in Progress Version des ggplot2 Buches.
 
 ## Karten mit ggplot
 
